bpo-33824, bpo-32030: Fix pymain_read_conf() (GH-7712)

Fix "LC_ALL=C python3.7 -V": reset properly the command line parser
when the encoding changes after reading the Python configuration.

Fix pymain_read_conf(): use memset(0) to reset properly cmdline.